--- a/realworld/templates/serviceaccount.yaml
+++ b/realworld/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "demoapp.serviceAccountName" . }}
+  name: {{ include "realworld.serviceAccountName" . }}
   labels:
-    {{- include "demoapp.labels" . | nindent 4 }}
+    {{- include "realworld.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
