--- a/realworld/values.yaml
+++ b/realworld/values.yaml
@@ -1,4 +1,4 @@
-# Default values for demoapp.
+# Default values for realworld.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
