--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
-Django==1.10.5
-django-cors-middleware==1.3.1
-django-extensions==1.7.1
-djangorestframework==3.4.4
-PyJWT==1.4.2
-six==1.10.0
+Werkzeug
+SQLAlchemy==1.1.9
+Flask_Caching
+Flask_SQLAlchemy==2.2
+click
+marshmallow
+Flask_Bcrypt
+flask_apispec
+Flask
+PyJWT
+Flask-JWT-Extended
+unicode_slugify
+psycopg2
+Flask-Migrate
+gunicorn
+Flask-Cors
 honeycomb-beeline
 setuptools
