--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,7 @@
-Werkzeug
-SQLAlchemy==1.1.9
-Flask_Caching
-Flask_SQLAlchemy==2.2
-click
-marshmallow
-Flask_Bcrypt
-flask_apispec
-Flask
-PyJWT==1.6.1
-Flask-JWT-Extended==2.4.1
-unicode_slugify
-psycopg2-binary
-Flask-Migrate
-gunicorn
-Flask-Cors
+click==7.0                # via flask
+flask==1.1.1              # via flaskr (setup.py)
+itsdangerous==1.1.0       # via flask
+jinja2==2.11.1            # via flask
+markupsafe==1.1.1         # via jinja2
+werkzeug==1.0.0           # via flask
 honeycomb-beeline
-setuptools
-pytest
-WebTest
-factory-boy
-Faker
