--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,13 @@
-[flake8]
-max-line-length=120
+[metadata]
+license_file = LICENSE
+
+[bdist_wheel]
+universal = True
+
+[tool:pytest]
+testpaths = tests
+
+[coverage:run]
+branch = True
+source =
+    flaskr
