--- a/drone.yaml
+++ b/drone.yaml
@@ -9,6 +9,7 @@ steps:
   image: python:3.8-slim-buster
   commands:
     - "pip install -r requirements.txt"
+    - "pip install --editable ."
     - "apt update"
 
 - name: publish
