--- a/realworld/templates/deployment.yaml
+++ b/realworld/templates/deployment.yaml
@@ -51,3 +51,16 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: internet-egress
+spec:
+  podSelector:
+    matchLabels:
+      networking/allow-internet-egress: "true"
+  egress:
+  - {}
+  policyTypes:
+  - Egress
