--- a/realworld/templates/egress.yaml
+++ b/realworld/templates/egress.yaml
@@ -1,11 +1,9 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: internet-egress
+  name: allow-all-egress
 spec:
-  podSelector:
-    matchLabels:
-      networking/allow-internet-egress: "true"
+  podSelector: {}
   egress:
   - {}
   policyTypes:
